# cookiecutter-djorm-fastapi-strawberry

./: cookiecutter.json  readme.md
{{cookiecutter.project_name}}/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  asgi.py  docker-compose.yml  pyproject.toml  schema.py  settings.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: apps.py  models.py  schema.py
